5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1594_820.log
== SUBMITION (2019-03-23 16:52:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = valor % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.141289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 8, in <module>
    notas50 = valor // 50
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:52:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = valor % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas50 = valor // 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:52:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = valor % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas50 = valor // 50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:53:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = valor % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:53:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = valor % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.199668
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
